[project]
name = "cbav-data-retrieval"
version = "1.0.0"
description = "An app made by the Patribots meant to interact with the CBA Software to gather data from a CBA device and send it to a database."
requires-python = ">=3.12"
readme = "README.md"
license = "CC-BY-4.0"
authors = [
    { name = "fsk", email = "surfluke19@gmail.com" },
    { name = "Patribots", email = "patribots4738@gmail.com" }
]
maintainers = [
    { name = "fsk", email = "surfluke19@gmail.com" }
]
dependencies = [
    "pick>=2.6.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[project.urls]
HomePage = "https://github.com/Patribots4738/CBAV-Data-Retrieval"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.28",
]
